2005-10-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Prioritize the cairo backend over the libart one; disable the libart backend until it builds again
	* Makefile.am: Ditto
	* rsvg-cairo-draw.c (rsvg_cairo_generate_mask): Fix major memleak generating a mask surface
	
2005-10-20 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: filters now using pre-multiplied alpha and have changable byte ordering
	* rsvg-cairo-draw.c: handles bounding boxes around images correctly
	
2005-10-19 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-draw.c: series of hacks to make filters work
	* rsvg-filter.c: use the new bbox system used in rsvg-cairo for filters
	* rsvg-base.c: moved RsvgCairoBbox to RsvgBbox
	
2005-10-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-draw.c: No need to new0() image data, it just wastes CPU
	since we'll be overwriting it anyway.
	
2005-10-13 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-draw.c: made masks more efficient by not needing two textures, made patterns crisper and hopefully faster by scaling ahead of time. Still does not do full pre-transformation.
	* rsvg-cairo-clip.c: made clip-rule work properly

2005-10-12 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-draw.c, rsvg-cairo-render.c, rsvg-cairo-render.h, rsvg-cairo-clip.h: made clip paths and masks able to use objectBoundingBox coordinates
	
2005-10-11 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: made text not crash rsvg when used with the new switch system. I can't believe I havn't got around to rewriting the text system yet.

2005-10-10 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: patterns now transform correctly, passes all pattern tests
	* rsvg-cairo-draw.c: fx and fy were confused with cx and cy in the radial gradient section
	
2005-10-09 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-structure.c: added preservation of aspect ratio to SVG elements
